freshed-rs-macros/tests/ui/fail/component_duplicate_props_html.stderr
error: duplicate property 'label' on component 'Button'
  --> tests/ui/fail/component_duplicate_props_html.rs:14:37
   |
14 |     let _ = html!(<Button label="A" label="B"></Button>);
   |                                     ^^^^^
